fix flyout menu visibility #84

--- a/assets/css/sass/components/_quick-nav.scss
+++ b/assets/css/sass/components/_quick-nav.scss
@@ -281,6 +281,8 @@
             background: white;
             padding-bottom: 0.6rem;
             min-width: 17.5rem;
+            max-height: calc(100vh - 135px);
+            overflow: auto;
             box-shadow: $box-shadow;
         }
     }
